--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   
-  "homepage":"htpp://localhost/ToDoS",
+  "homepage":"https://Mouadbt09.github.io/Todo-App",
   "name": "froms",
   "version": "0.1.0",
   "private": true,
@@ -15,6 +15,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy":"npm run build",
+    "deploy":"gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
